cless/test-data/error/char_const_no_close.c
int main() {
    char c = 'a
';
}
